--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ toc:
   - title: About
     url: /about/
   - title: Author
-    url: /author/    
+    url: /author    
     
   - title: Dropdown
     subfolderitems:
