--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ toc:
   - title: Blog
     url: /blog/    
   - title: About
-    url: /about/
+    url: /about
   - title: Author
     url: /author    
     
