--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ markdown: kramdown
 # About/contact
 author: Sharad Raj
 
-bio: I'm a programmer, a blogger and a student :). I am doing coding since I was 14,it was my dream after all. My current future goal is to become an entrepreneur in the field of Cyber Security & Ethical Hacking as well as in Software Development, I have also thought of jumping into the Android Development as well.I have been a scholar since my 10th. Recently I got the Google India Scholarship for Front End Web Development.
+bio: Developer | Student
   
 contact:
    - title: Linkedin
